# agenthelper

./: .gitignore  QUICK_START.md  README.md  agenthelper.py  cli.py  com.agenthelper.plist  config.json  find_comments.py  justfile  pyproject.toml  requirements.txt  run.sh  setup.sh  test_debug.py
.github/workflows/: claude-code-review.yml
github-pr-simplifier/: README.md  content.js  manifest.json  styles.css
src/gh_nudger/: cli.py  config.py  github.py  nudger.py  state.py
